AM-2873 Unit test adjustments for null scenarios
   [AM-2873](https://tools.hmcts.net/jira/browse/AM-2873)

Unit test adjustments for null scenarios.